<?xml version="1.0"?>
<package>
  <name>play_motion</name>
  <version>0.3.4</version>
  <description>Plays a pre-recorded motion on a robot</description>

  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>play_motion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>play_motion_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <!-- test build depends -->
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>

</package>
