<?xml version="1.0"?>
<package format="3">
  <name>play_motion</name>
  <version>0.4.8</version>
  <description>Plays a pre-recorded motion on a robot</description>

  <maintainer email="victor.lopez@pal-robotics.com">Victor Lopez</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>play_motion_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <!-- test build depends -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_pal</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>pluginlib</test_depend>
  <test_depend>rcl_yaml_param_parser</test_depend>
  <test_depend>rclcpp_action</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
