<?xml version="1.0"?>
<package>
  <name>play_motion_msgs</name>
  <version>0.4.0</version>
  <description>Messages, services and actions used by play_motion.</description>

  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
