<?xml version="1.0"?>
<package format="3">
  <name>play_motion_msgs</name>
  <version>0.4.8</version>
  <description>Messages, services and actions used by play_motion.</description>

  <maintainer email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</maintainer>
  <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>
  <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodriguez Tsouroukdissian</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>รง

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
